# vehicle-information-service

./: .gitlab-ci.yml  Cargo.toml  LICENSE.md  README.md  deny.toml  rust-toolchain
.github/workflows/: rust.yml
vehicle-information-service/: Cargo.toml  README.md  rust-toolchain
vehicle-information-service-client/: Cargo.toml  README.md  rust-toolchain
vehicle-information-service-client/examples/: get.rs
vehicle-information-service-client/src/: lib.rs
vehicle-information-service-client/tests/: gets.rs  subscriptions.rs
vehicle-information-service/examples/: server.rs
vehicle-information-service/src/: api_error.rs  api_type.rs  filter.rs  lib.rs  router.rs  signal_manager.rs
vehicle-information-service/src/action/: authorize.rs  get.rs  get_metadata.rs  mod.rs  set.rs  subscribe.rs  unsubscribe.rs  unsubscribe_all.rs
vehicle-information-service/tsts/: gets.rs  subscriptions.rs
