[package]
authors = ["olu@daimler.com"]
description = "This is a client implementiaton for the Vehicle Information Service standard"
documentation = "https://docs.rs/vehicle-information-service"
license = "MIT"
homepage = ""
repository = ""
edition = "2018"
keywords = ["automotive", "vis", "vehicle", "car"]
name = "vehicle-information-service-client"
readme = "README.md"
version = "1.1.2"

[dependencies]
byteorder = "1.3"
env_logger = "0.7"
futures = { version = "0.3", features = ["compat"] }
futures-util = { version = "0.3", features = ["compat"] }
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }
tokio-tungstenite = "0.11.0"
url = "1.7"
vehicle-information-service = { path = "../vehicle-information-service" }

[dependencies.serde_json]
version = "1.0"
# u128 can currently not be deserialized using serde
# Waiting for fix to https://github.com/serde-rs/json/issues/505
# features = ["arbitrary_precision"]

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.8"

[features]
integration_tests = []
