[package]
authors = ["olu@daimler.com"]
description = "This is an implementiaton for the Vehicle Information Service standard"
documentation = "https://docs.rs/vehicle-information-service"
license = "MIT"
homepage = ""
repository = ""
edition = "2018"
keywords = ["automotive", "vis", "vehicle", "car"]
name = "vehicle-information-service"
readme = "README.md"
version = "1.1.2"

[dependencies]
actix = "0.8.2"
actix-http= "0.2.0"
actix-web = "1.0.0"
actix-web-actors = "1.0.0"
actix-service = "0.4.0"
futures-preview = { version = "0.3.0-alpha.16", features = ["compat"] }
futures-util-preview =  { version = "0.3.0-alpha.16", features = ["compat"] }
http = "0.1"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"

[dependencies.serde_json]
version = "1.0"
# u128 can currently not be deserialized using serde
# Waiting for fix to https://github.com/serde-rs/json/issues/505
# features = ["arbitrary_precision"]

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.7"

[dev-dependencies]
byteorder = "1.3"
env_logger = "0.6"
structopt = "0.2"
tokio-socketcan = "0.1"
tokio = { version = "0.1", features = ["async-await-preview"] }
websocket = "0.22"

[features]
integration_tests = []
