[package]
authors = ["olu@daimler.com"]
description = "This is an implementiaton for the Vehicle Information Service standard"
documentation = "https://docs.rs/vehicle-information-service"
license = "MIT"
homepage = ""
repository = ""
edition = "2018"
keywords = ["automotive", "vis", "vehicle", "car"]
name = "vehicle-information-service"
readme = "README.md"
version = "1.1.2"

[dependencies]
actix = "0.10"
actix-http= "2.0"
actix-web = "3.0"
actix-web-actors = "3.0"
actix-service = "1.0"
futures = { version = "0.3", features = ["compat"] }
futures-util = { version = "0.3", features = ["compat"] }
http = "0.2"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"

[dependencies.serde_json]
version = "1.0"
# u128 can currently not be deserialized using serde
# Waiting for fix to https://github.com/serde-rs/json/issues/505
# features = ["arbitrary_precision"]

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.8"

[dev-dependencies]
byteorder = "1.3"
env_logger = "0.7"
structopt = "0.3"
tokio-socketcan = "0.1"
websocket = "0.23"

[features]
integration_tests = []
